# service-vitals

./: .gitignore  BATCH_NOTIFICATION_IMPLEMENTATION.md  Cargo.toml  DASHBOARD_FIXES.md  NOTIFICATION_FIXES.md  PROJECT_STRUCTURE_OPTIMIZATION.md  README.md  REFACTORING_SUMMARY.md  clippy.toml  rustfmt.toml  test_config.toml  test_init_config.toml
.cursor/rules/: rust-structure.mdc  rust-style.mdc
.github/workflows/: build-on-tag.yml  ci.yml  manual-build.yml  rust.yml
benches/: README.md  config_processing.rs  health_checker.rs  notification.rs
docs/: ERROR_MESSAGE_CHAIN_FIXES.md  ci-cd-setup.md  logging-system-guide.md  service-vitals-development-guide.md  service-vitals-implementation-guide.md  service_status_improvements.md
examples/: basic_config.toml  full_config.toml  minimal_config.toml  service_status_demo.md  web_config.toml
githooks/: pre-commit  pre-commit.ps1
src/: app.rs  daemon_service.rs  error.rs  foreground_service.rs  lib.rs  logging.rs  logging_tests.rs  main.rs  service.rs  status.rs
src/cli/: args.rs  commands.rs  mod.rs
src/common/: error.rs  logging.rs  mod.rs  status.rs
src/config/: loader.rs  manager.rs  mod.rs  types.rs  watcher.rs
src/core/: app.rs  daemon_service.rs  foreground_service.rs  mod.rs  service.rs
src/daemon/: mod.rs  service_manager.rs  signal_handler.rs  unix.rs  windows.rs
src/health/: checker.rs  mod.rs  result.rs  scheduler.rs
src/notification/: feishu.rs  mod.rs  sender.rs  template.rs
src/web/: api.rs  auth.rs  dashboard.rs  handlers.rs  metrics.rs  mod.rs  server.rs
templates/: dashboard.html
tests/: notification_test.rs
tests/data/configs/: test_config.toml
