[package]
name = "service-vitals"
version = "0.1.0"
edition = "2021"
authors = ["flyGetHu <970780868@qq.com>"]
description = "A cross-platform service health monitoring tool with notification support"
license = "MIT"
repository = "https://github.com/flyGetHu/service-vitals"
keywords = ["monitoring", "health-check", "service", "notification", "cli"]
categories = ["command-line-utilities", "web-programming::http-client"]

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12.24", features = [
  "json",
  "rustls-tls",
], default-features = false }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

# CLI framework
clap = { version = "4.5.51", features = ["derive", "env"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging
log = "0.4.28"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "json",
  "time",
  "chrono",
] }
tracing-log = "0.2.0"

# Time handling
chrono = { version = "0.4.42", features = ["serde"] }

# File watching for hot reload
notify = "8.2.0"

# Template engine for notifications
handlebars = "6.3.2"

# Cross-platform directories
dirs = "6.0.0"

# Async trait support
async-trait = "0.1.89"

# UUID generation
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Regular expressions
regex = "1.12.2"

# Futures utilities
futures = "0.3.31"

# Cryptography for Feishu signature
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"

# Web server dependencies
axum = "0.8.6"
askama = "0.14.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }


# Unix-specific dependencies (Linux, macOS, etc.)
[target.'cfg(unix)'.dependencies]
# Daemon/Service support
signal-hook = "0.3.18"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }

# Unix system interfaces
nix = "0.30.1"
libc = "0.2.177"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4.4"
tempfile = "3.23.0"
mockito = "1.7.0"
criterion = "0.7.0"
serial_test = "3.2.0"

[[bench]]
name = "health_checker"
harness = false

[[bench]]
name = "config_processing"
harness = false

[[bench]]
name = "notification"
harness = false
